图片打包引入，小体积的图片使用base64打包，设定outputPath来给打包文件分类

--- a/webpack_01/src/index.html
+++ b/webpack_01/src/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h4>这里是webpack的打包html模板</h4>
+        <div>下面是在html中的img标签创建的图片</div>
+        <img src="./image/img0.png">
+        <div>最后是js创建的图片</div>
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     </body>
 </html>
